tooling/nargo_cli/tests/snapshots/execution_success/cast_to_u8_regression_7776/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
pub fn main(a: Field, b: Field) -> pub u8 {
    (a - b) as u8
}
